<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IAmHere</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="last_update_time_label">Last location update time: </string>
    <string name="location_updated_message">Location updated</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
