<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/layout_padding">

    <Button
        android:id="@+id/start_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:onClick="startUpdatesButtonHandler"
        android:text="@string/start_updates" />

    <Button
        android:id="@+id/stop_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:enabled="false"
        android:onClick="stopUpdatesButtonHandler"
        android:text="@string/stop_updates" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start_updates_button"
        android:layout_marginTop="@dimen/ui_group_top_margin"
        android:text="@string/latitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/latitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/latitude_label"
        android:text="@string/longitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/longitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/last_update_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/longitude_label"
        android:text="@string/last_update_time_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/last_update_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/last_update_time_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/last_update_time_label"
        android:textSize="@dimen/default_text_size" />

    <!--<Button-->
        <!--android:id="@+id/fetch_address_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/fetch_address"-->
        <!--android:onClick="fetchAddressButtonHandler"-->
        <!--android:layout_above="@+id/location_address_view"-->
        <!--android:layout_alignParentStart="true"/>-->

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/last_update_time_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!--<ProgressBar-->
        <!--android:id="@+id/progress_bar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true" />-->

    <!--<TextView-->
        <!--android:id="@+id/location_address_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="@dimen/default_text_size"-->
        <!--android:layout_marginBottom="47dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentStart="true"/>-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_below="@+id/last_update_time_label"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_above="@+id/fetch_address_button"-->
        <!--android:layout_alignEnd="@+id/map">-->

        <!--<fragment-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/map"-->
            <!--tools:context=".MapsActivity"-->
            <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
            <!--android:layout_below="@+id/last_update_time_label"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true"/>-->
    <!--</LinearLayout>-->
</RelativeLayout>


